--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paper-dashboard-react",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://ingreyeslara.github.io/gitpages_junio",
+  "homepage": "https://ingreyeslara.github.io/proyecto_alumnos_miercoles",
   "dependencies": {
     "@babel/core": "7.18.6",
     "bootstrap": "4.6.0",
